force-app/main/default/objects/ucinn_ascendv2__Giving_Society__c/ucinn_ascendv2__Giving_Society__c.object-meta.xml
<CustomObject>
    <description>Memberships to schools and university wide associations that makes charitable donations/gifts back to their donors using rule sets to determine the level of charitable acts.</description>
    <label>Giving Society</label>
    <nameField>
        <label>Giving Society Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Giving Societies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>