force-app/main/default/objects/ucinn_ascendv2__Giving_Society__c/fields/Campus_Department__c.field-meta.xml
<CustomField>
    <fullName>Campus_Department__c</fullName>
    <label>Campus Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4-H Foundation</fullName>
            </value>
            <value>
                <fullName>4H Youth Development Program</fullName>
            </value>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Admissions</fullName>
            </value>
            <value>
                <fullName>Aerospace Engr &amp; Engr Mech</fullName>
            </value>
            <value>
                <fullName>Ag &amp; Biosystems Engineering</fullName>
            </value>
            <value>
                <fullName>Ag and Natural Resources (Extension)</fullName>
            </value>
            <value>
                <fullName>Ag Economics</fullName>
            </value>
            <value>
                <fullName>Ag Education &amp; Studies</fullName>
            </value>
            <value>
                <fullName>Ag Entrepreneurship</fullName>
            </value>
            <value>
                <fullName>Ag Placement</fullName>
            </value>
            <value>
                <fullName>Ag Sociology</fullName>
            </value>
            <value>
                <fullName>Ag Specials</fullName>
            </value>
            <value>
                <fullName>Agronomy</fullName>
            </value>
            <value>
                <fullName>Air Force Aerospace Studies</fullName>
            </value>
            <value>
                <fullName>Animal Science</fullName>
            </value>
            <value>
                <fullName>Architecture</fullName>
            </value>
            <value>
                <fullName>Art and Visual Culture</fullName>
            </value>
            <value>
                <fullName>Baker Council</fullName>
            </value>
            <value>
                <fullName>Biochemistry &amp; Biophysics1</fullName>
            </value>
            <value>
                <fullName>Biochemistry &amp; Biophysics2</fullName>
            </value>
            <value>
                <fullName>Bioeconomy Institute</fullName>
            </value>
            <value>
                <fullName>Bioinformatics &amp; Bio Statistic</fullName>
            </value>
            <value>
                <fullName>Biology</fullName>
            </value>
            <value>
                <fullName>Biomedical Sciences</fullName>
            </value>
            <value>
                <fullName>Brenton Center</fullName>
            </value>
            <value>
                <fullName>Business Administration</fullName>
            </value>
            <value>
                <fullName>CALS Administration</fullName>
            </value>
            <value>
                <fullName>Carrie Chapman Catt Center</fullName>
            </value>
            <value>
                <fullName>CBER-Center for Building Energy Research</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>