force-app/main/default/objects/ucinn_ascendv2__Giving_Society__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>For Data Migration Use</description>
    <externalId>true</externalId>
    <label>Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>