force-app/main/default/objects/ucinn_ascendv2__Giving_Society__c/fields/College__c.field-meta.xml
<CustomField>
    <fullName>College__c</fullName>
    <label>College</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Academic Admin &amp; Support</fullName>
            </value>
            <value>
                <fullName>Achievement Fund</fullName>
            </value>
            <value>
                <fullName>Agriculture and Life Sciences</fullName>
            </value>
            <value>
                <fullName>Ames Lab</fullName>
            </value>
            <value>
                <fullName>Athletic Department</fullName>
            </value>
            <value>
                <fullName>Balance Sheet</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>CFO</fullName>
            </value>
            <value>
                <fullName>Counseling Center</fullName>
            </value>
            <value>
                <fullName>Dean of Students</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Enrollment Management</fullName>
            </value>
            <value>
                <fullName>Extension</fullName>
            </value>
            <value>
                <fullName>Facilities Planning and Management</fullName>
            </value>
            <value>
                <fullName>Financial Aid</fullName>
            </value>
            <value>
                <fullName>Financial Aid Loans</fullName>
            </value>
            <value>
                <fullName>Foundation Budget</fullName>
            </value>
            <value>
                <fullName>Graduate College</fullName>
            </value>
            <value>
                <fullName>Health Center</fullName>
            </value>
            <value>
                <fullName>Human Sciences</fullName>
            </value>
            <value>
                <fullName>International Services</fullName>
            </value>
            <value>
                <fullName>ISU Alumni Association</fullName>
            </value>
            <value>
                <fullName>ISU Center</fullName>
            </value>
            <value>
                <fullName>ISU Foundation</fullName>
            </value>
            <value>
                <fullName>ISU President</fullName>
            </value>
            <value>
                <fullName>ITS</fullName>
            </value>
            <value>
                <fullName>Liberal Arts and Sciences</fullName>
            </value>
            <value>
                <fullName>Memorial Union</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>