force-app/main/default/objects/ucinn_ascendv2__Giving_Society__c/fields/ucinn_ascendv2__Deployment_Notes__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Deployment_Notes__c</fullName>
    <description>Lists the instructions received from each school</description>
    <label>Deployment Notes</label>
    <type>TextArea</type>
</CustomField>