force-app/main/default/objects/ucinn_ascendv2__Giving_Society__c/fields/ucinn_ascendv2__Number_of_Members_Roll_Up__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Number_of_Members_Roll_Up__c</fullName>
    <label>Number of Members</label>
    <summaryForeignKey>ucinn_ascendv2__Society_Membership__c.ucinn_ascendv2__Giving_Society__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>