force-app/main/default/objects/ucinn_ascendv2__Giving_Society__c/fields/ucinn_ascendv2__School__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__School__c</fullName>
    <label>School</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ucinn_ascendv2__Unit</valueSetName>
    </valueSet>
</CustomField>