force-app/main/default/objects/ucinn_ascendv2__Giving_Society__c/fields/ucinn_ascendv2__Society_Website__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Society_Website__c</fullName>
    <inlineHelpText>Link to the giving society details</inlineHelpText>
    <label>Society Website</label>
    <type>Url</type>
</CustomField>