force-app/main/default/objects/ucinn_ascendv2__Giving_Society__c/fields/ucinn_portal_Banner_Text__c.field-meta.xml
<CustomField>
    <fullName>ucinn_portal_Banner_Text__c</fullName>
    <description>If populated will overwrite the banner text on the giving society detail page.</description>
    <label>Portal Banner Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>