force-app/main/default/objects/ucinn_ascendv2__Giving_Society__c/fields/ucinn_portal_Description__c.field-meta.xml
<CustomField>
    <fullName>ucinn_portal_Description__c</fullName>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>