force-app/main/default/objects/ucinn_ascendv2__Giving_Society__c/fields/ucinn_portal_Display_Order__c.field-meta.xml
<CustomField>
    <fullName>ucinn_portal_Display_Order__c</fullName>
    <label>Display Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>