force-app/main/default/objects/ucinn_ascendv2__Giving_Society__c/fields/ucinn_portal_Is_Display_On_Portal__c.field-meta.xml
<CustomField>
    <fullName>ucinn_portal_Is_Display_On_Portal__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Display On Portal</label>
    <type>Checkbox</type>
</CustomField>