force-app/main/default/objects/ucinn_ascendv2__Giving_Society__c/fields/ucinn_portal_Label__c.field-meta.xml
<CustomField>
    <fullName>ucinn_portal_Label__c</fullName>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>