force-app/main/default/objects/ucinn_ascendv2__Giving_Society__c/fields/ucinn_portal_Society_Logo__c.field-meta.xml
<CustomField>
    <fullName>ucinn_portal_Society_Logo__c</fullName>
    <label>Society Logo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>