force-app/main/default/objects/ucinn_ascendv2__Giving_Society__c/fields/ucinn_portal_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_portal_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Lifetime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>