force-app/main/default/objects/ucinn_ascendv2__Giving_Society__c/recordTypes/Athletic_Prospects.recordType-meta.xml
<RecordType>
    <fullName>Athletic_Prospects</fullName>
    <active>false</active>
    <description>Used for ISUF Athletic Prospects</description>
    <label>Athletic Prospects</label>
</RecordType>