force-app/main/default/objects/ucinn_ascendv2__Giving_Society__c/listViews/Giving_Societies.listView-meta.xml
<ListView>
    <fullName>Giving_Societies</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Society_Website__c</columns>
    <columns>ucinn_ascendv2__Number_of_Members_Roll_Up__c</columns>
    <columns>ucinn_ascendv2__Status__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Code__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>Giving Societies</label>
</ListView>